Layout shift fixes

--- a/web/css/layout/_swatches.less
+++ b/web/css/layout/_swatches.less
@@ -23,7 +23,7 @@
         flex-wrap: wrap;
         gap: @swatch__gap;
 
-        :where(.products-grid, .slick-list) & {
+        :where(.products-grid, .widget-product-carousel) & {
             .lib-css(justify-content, @listing-swatch-options__justify-content);
         }
     }
