--- a/web/css/layout/listing/_reveal-on-hover.less
+++ b/web/css/layout/listing/_reveal-on-hover.less
@@ -1,5 +1,5 @@
 & when (@critical) {
-    :where(.products-grid, .slick-list) .product-item {
+    :where(.products-grid, .widget-product-carousel) .product-item {
         // overflowed item that reveal its content on hover
         & when not (@listing-grid-item__max-height = false) {
             height: 0;
@@ -85,7 +85,7 @@
                     }
                     .stock {
                         &:extend(.breeze-button);
-                        &:extend(:where(.products-grid, .slick-list) .product-item .product-item-details .actions-primary .tocart);
+                        &:extend(:where(.products-grid, .widget-product-carousel) .product-item .product-item-details .actions-primary .tocart);
                         color: @muted__color;
                     }
                 }
